--- a/WorldWeaver/WorldWeaver.csproj
+++ b/WorldWeaver/WorldWeaver.csproj
@@ -56,11 +56,11 @@
     <Compile Include="DMform.Designer.cs">
       <DependentUpon>DMform.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoadGame.cs">
+    <Compile Include="loadGame.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoadGame.Designer.cs">
-      <DependentUpon>LoadGame.cs</DependentUpon>
+    <Compile Include="loadGame.Designer.cs">
+      <DependentUpon>loadGame.cs</DependentUpon>
     </Compile>
     <Compile Include="newGameRoles.cs">
       <SubType>Form</SubType>
@@ -80,19 +80,13 @@
     <Compile Include="map_upload.Designer.cs">
       <DependentUpon>map_upload.cs</DependentUpon>
     </Compile>
-    <Compile Include="playercreation.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="playercreation.Designer.cs">
-      <DependentUpon>playercreation.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="DMform.resx">
       <DependentUpon>DMform.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoadGame.resx">
-      <DependentUpon>LoadGame.cs</DependentUpon>
+    <EmbeddedResource Include="loadGame.resx">
+      <DependentUpon>loadGame.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="newGameRoles.resx">
       <DependentUpon>newGameRoles.cs</DependentUpon>
@@ -102,9 +96,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="map_upload.resx">
       <DependentUpon>map_upload.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="playercreation.resx">
-      <DependentUpon>playercreation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
