--- a/WorldWeaver/WorldWeaver.csproj
+++ b/WorldWeaver/WorldWeaver.csproj
@@ -106,6 +106,9 @@
     <Compile Include="upload_token.Designer.cs">
       <DependentUpon>upload_token.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="create_campaign.resx">
+      <DependentUpon>create_campaign.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NPCform.resx">
       <DependentUpon>NPCform.cs</DependentUpon>
     </EmbeddedResource>
