--- a/WorldWeaver/App.config
+++ b/WorldWeaver/App.config
@@ -5,7 +5,7 @@
 	</startup>
 	<connectionStrings>
 		<add name="MyDatabaseConnectionString"
-             connectionString="Data Source=MFLAPPY;Initial Catalog=worldweaver;Integrated Security=True"
+             connectionString="Data Source=;Initial Catalog=worldweaver;Integrated Security=True"
              providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
